--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
             color: #eab308;
             text-decoration: underline;
         }
+
+        /* Estilo do botão YouTube */
+        .button-youtube {
+            background-color: #FF0000; /* Cor do YouTube */
+            color: white;
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-weight: bold;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .button-youtube:hover {
+            background-color: #cc0000;
+        }
+
+        /* Garantir que o link da Lojinha do Bodinho esteja sublinhado */
+        .logo-text a {
+            text-decoration: underline;
+            color: white;
+        }
     </style>
 </head>
 <body class="min-h-screen bg-gray-950 text-white">
@@ -62,28 +84,62 @@
     <header class="sticky top-0 z-50 bg-gray-900 border-b border-gray-800 shadow-lg">
         <div class="max-w-7xl mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
+
+                <!-- Logo + Nome clicável -->
                 <div class="flex items-center gap-3">
-                    <img src="https://i.postimg.cc/02kNzJr8/bode.png" alt="Lojinha do Bodinho" class="w-12 h-12 rounded-lg object-cover shadow-lg">
-                    <span class="text-xl font-medium logo-text hidden sm:block">Lojinha do Bodinho</span>
+                    <img src="https://i.postimg.cc/02kNzJr8/bode.png" 
+                         alt="Lojinha do Bodinho" 
+                         class="w-12 h-12 rounded-lg object-cover shadow-lg">
+
+                    <!-- Nome clicável com sublinhado -->
+                    <a href="https://www.youtube.com/@astarothBR" 
+                       target="_blank"
+                       class="text-xl font-medium logo-text hidden sm:block underline">
+                        Lojinha do Bodinho
+                    </a>
                 </div>
 
                 <div class="flex items-center gap-3 ml-auto">
-                    <button onclick="checkAdminAccess()" class="p-2 hover:bg-gray-800 rounded-lg transition" id="adminButton">
+
+                    <button onclick="checkAdminAccess()" 
+                            class="p-2 hover:bg-gray-800 rounded-lg transition" 
+                            id="adminButton">
                         ⚙️
                     </button>
-                    <button onclick="toggleCart()" class="relative p-2 hover:bg-gray-800 rounded-lg transition">
+
+                    <button onclick="toggleCart()" 
+                            class="relative p-2 hover:bg-gray-800 rounded-lg transition">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 
+                                  0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+                            </path>
                         </svg>
-                        <span id="cartBadge" class="hidden absolute -top-1 -right-1 bg-yellow-500 text-black text-xs font-bold w-5 h-5 rounded-full items-center justify-center">0</span>
+
+                        <span id="cartBadge" 
+                              class="hidden absolute -top-1 -right-1 bg-yellow-500 text-black text-xs font-bold w-5 h-5 rounded-full items-center justify-center">
+                            0
+                        </span>
                     </button>
-                    <button onclick="logout()" id="logoutButton" class="p-2 hover:bg-gray-800 rounded-lg transition text-red-400 hidden" title="Sair">
+
+                    <button onclick="logout()" 
+                            id="logoutButton" 
+                            class="p-2 hover:bg-gray-800 rounded-lg transition text-red-400 hidden" 
+                            title="Sair">
                         🚪
                     </button>
+
+                    <!-- Botão YouTube -->
+                    <button onclick="window.open('https://www.youtube.com/@astarothBR', '_blank')" 
+                            class="bg-red-600 hover:bg-red-700 px-4 py-2 rounded-lg font-semibold">
+                        YouTube
+                    </button>
+
                 </div>
             </div>
         </div>
     </header>
+
 
     <!-- Login Modal -->
     <div id="loginModal" class="fixed inset-0 z-50 bg-black bg-opacity-70 flex items-center justify-center p-4 hidden">
