--- a/index.html
+++ b/index.html
@@ -386,19 +386,19 @@
                 rating: 4.8,
                 downloads: 57,
                 downloadLink: "https://www.mediafire.com/file/3vxvaizlrjn3imw/moonloader.rar/file",
-                description: "[b]Mod Menu Completo com ESP[/b]\n\Tecla X abre o Menu \n\n[color=red]ATENÇÃO:[/color] Use com responsabilidade!",
-                paymentMethods: ["pix", "mercadopago", "picpay"]
+                description: "[b]Mod Menu Completo com ESP[/b]\nTecla X abre o Menu\n\n[color=red]ATENÇÃO:[/color] Use com responsabilidade!",
+                paymentMethods: ["pix"]
             },
             {
                 id: 2,
                 name: "Menu Sensifix Traduzido",
                 category: "Geral",
                 price: 0,
-                image: "https://i.postimg.cc/WbGtLqp6/sa-mp-093.png",
+                image: "https://i.postimg.cc/WbGtLqp6/sa_mp_093.png",
                 rating: 5,
-                downloads: 42,
+                downloads: 0,
                 downloadLink: "https://drive.google.com/uc?export=download&id=1sMUceNrS4hUhQ1iROjCXzJHp5dGQ4O8S",
-                description: "Menu Sensifix completamente traduzido para português\,Use /sensa para abri-lo",
+                description: "Use /sensa para abri-lo",
                 paymentMethods: ["pix"]
             },
             {
@@ -406,11 +406,11 @@
                 name: "Menu Keyboard Traduzido",
                 category: "Geral",
                 price: 0,
-                image: "https://i.postimg.cc/1Xg6rmDq/sa-mp-091.png",
+                image: "https://i.postimg.cc/1Xg6rmDq/sa_mp_091.png",
                 rating: 5,
-                downloads: 25,
+                downloads: 0,
                 downloadLink: "https://drive.google.com/uc?export=download&id=1h3Oi8AvDsmRkGQIImrwCoFXefPaMbLaG",
-                description: "Menu Keyboard totalmente em português\nUse /key ou /keyboard para abri-lo",
+                description: "Use /key ou /keyboard para abri-lo",
                 paymentMethods: ["pix"]
             },
             {
@@ -418,11 +418,58 @@
                 name: "Damage Informer Traduzido e Descompilado",
                 category: "Geral",
                 price: 0,
-                image: "https://i.postimg.cc/kMcXT3T1/sa-mp-086.png",
+                image: "https://i.postimg.cc/kMcXT3T1/sa_mp_086.png",
                 rating: 5,
-                downloads: 22,
+                downloads: 0,
                 downloadLink: "https://drive.google.com/uc?export=download&id=1H7rU840Peo_GXiJLKUQ2j8oan0Gas07W",
-                description: "Damage Informer traduzido e descompilado para edição\nUse /dmg para abri-lo",
+                description: "Use /dmg para abri-lo",
+                paymentMethods: ["pix"]
+            },
+            {
+                id: 5,
+                name: "Menu Sprint Bar Traduzido",
+                category: "Geral",
+                price: 0,
+                image: "https://i.postimg.cc/CK2ZjN3q/sa-mp-101.png",
+                rating: 5,
+                downloads: 0,
+                downloadLink: "https://www.mediafire.com/file/7nxlplsv5lp7sgj/Sprint_Bar.luac/file",
+                description: "[SIZE=18][B][COLOR=#36c9c6]🏃 Sprint Bar - Barra de Stamina[/COLOR][/B][/SIZE]\n[SIZE=12][I]Use /sbar para abrir o Menu[/I][/SIZE]",
+                paymentMethods: ["pix"]
+            },
+            {
+                id: 6,
+                name: "Menu SensetivFix Traduzido",
+                category: "Geral",
+                price: 0,
+                image: "https://i.postimg.cc/1t38T2rH/sa-mp-105.png",
+                rating: 5,                downloads: 0,
+                downloadLink: "https://drive.google.com/uc?export=download&id=1bganu2XJF9UqGlofN4iNe9GjJrnm96Z1",
+                description: "[B][I]Menu SensetivFix (Editor de sensiblidade)[/I][/B]\ntraduzido por mim 🙂\nUse /sfix",
+                paymentMethods: ["pix"]
+            },
+            {
+                id: 7,
+                name: "Menu Bind Traduzido",
+                category: "Geral",
+                price: 0,
+                image: "https://i.postimg.cc/TwQdZvjJ/sa-mp-106.png",
+                rating: 5,
+                downloads: 0,
+                downloadLink: "https://www.mediafire.com/file/on8yxikqh5hz2t0/SA_Bind-1.luac/file",
+                description: "[B][I]Menu Bind(Binder)[/I][/B]\ntraduzido 100% por mim 🙂\nUse /bind",
+                paymentMethods: ["pix"]
+            },
+            {
+                id: 8,
+                name: "Auto Login",
+                category: "Geral",
+                price: 0,
+                image: "https://i.postimg.cc/tgFDW3Nz/Captura-de-Tela-(40).png",
+                rating: 5,
+                downloads: 30,
+                downloadLink: "https://drive.google.com/uc?export=download&id=1pv-9fMeiFJlUoYRmAT9I6j1HqhWKOZYz",
+                description: "[b]Auto Login[/b]\nTecla F2 abre o Menu\nUse também /autologin\nColoque sua senha e salve se já não tiver configurada no menu\n\n[color=red]ATENÇÃO:[/color] Se for repostar, dê créditos",
                 paymentMethods: ["pix"]
             }
         ];
